098_bst_map/grade.txt
Grading at 11/15/2022:02:42:15.114254
For commit ID 022e304342982299e3ed5d347bdead552fc797d8
Grading at Mon Nov 14 09:42:13 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = int; V = int]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = int; V = int]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<int, int>’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = int; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<int, std::__cxx11::basic_string<char> >’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = int; V = Tester]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = int; V = Tester]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<int, Tester>’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = std::__cxx11::basic_string<char>; V = int]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<std::__cxx11::basic_string<char>, int>’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = std::__cxx11::basic_string<char>; V = Tester]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<std::__cxx11::basic_string<char>, Tester>’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = Tester; V = int]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = Tester; V = int]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<Tester, int>’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = Tester; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<Tester, std::__cxx11::basic_string<char> >’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::freeTree(BstMap<K, V>::Node*) [with K = Tester; V = Tester]’:
bstmap.h:20:29:   required from ‘BstMap<K, V>::~BstMap() [with K = Tester; V = Tester]’
89-tester.cpp:164:10:   required from here
bstmap.h:25:18: error: type ‘struct std::pair<Tester, Tester>’ argument given to ‘delete’, expected pointer
   25 |     delete root->val;
      |            ~~~~~~^~~
The code did not compile.  This test failed.

Overall Grade: F
